# server/api-spec.json
@@ -1,15 +1,58 @@
 {
-   "openapi": "3.0.3",
-   "info": {
-      "title": "Habit tracker",
-      "description": "Open api spec for habit tracker (habiteer)",
-      "version": "0.1.0"
+   "openapi": "3.1.0",
+   "info": { "version": "8.8.0", "title": "@fastify/swagger" },
+   "components": {
+      "schemas": {
+         "Habit": {
+            "type": "object",
+            "properties": {
+               "id": { "type": "integer" },
+               "name": { "type": "string" },
+               "description": {
+                  "anyOf": [{ "type": "string" }, { "type": "null" }]
+               },
+               "category": {
+                  "anyOf": [{ "type": "string" }, { "type": "null" }]
+               },
+               "trackingStartDate": { "type": "string", "format": "date" },
+               "repeatDays": {
+                  "type": "array",
+                  "minItems": 1,
+                  "maxItems": 7,
+                  "items": {
+                     "type": "string",
+                     "enum": [
+                        "monday",
+                        "tuesday",
+                        "wednesday",
+                        "thursday",
+                        "friday",
+                        "saturday",
+                        "sunday"
+                     ]
+                  }
+               }
+            },
+            "additionalProperties": false,
+            "required": [
+               "id",
+               "name",
+               "repeatDays",
+               "trackingStartDate",
+               "description",
+               "category"
+            ]
+         }
+      },
+      "securitySchemes": {
+         "cookieAuth": { "type": "apiKey", "in": "cookie", "name": "sessionId" }
+      }
    },
-   "components": { "schemas": {} },
    "paths": {
       "/api/signup": {
          "post": {
-            "tags": ["users"],
+            "operationId": "signup",
+            "tags": ["auth"],
             "requestBody": {
                "content": {
                   "application/json": {
@@ -33,7 +76,8 @@
       },
       "/api/login": {
          "post": {
-            "tags": ["users"],
+            "operationId": "login",
+            "tags": ["auth"],
             "requestBody": {
                "content": {
                   "application/json": {
@@ -54,6 +98,8 @@
       },
       "/api/logout": {
          "post": {
+            "operationId": "logout",
+            "tags": ["auth"],
             "responses": { "200": { "description": "Default Response" } }
          }
       },
@@ -112,7 +158,9 @@
                                  "id",
                                  "name",
                                  "repeatDays",
-                                 "trackingStartDate"
+                                 "trackingStartDate",
+                                 "description",
+                                 "category"
                               ]
                            }
                         }
@@ -131,8 +179,18 @@
                         "type": "object",
                         "properties": {
                            "name": { "type": "string" },
-                           "description": { "type": "string" },
-                           "category": { "type": "string" },
+                           "description": {
+                              "anyOf": [
+                                 { "type": "string" },
+                                 { "type": "null" }
+                              ]
+                           },
+                           "category": {
+                              "anyOf": [
+                                 { "type": "string" },
+                                 { "type": "null" }
+                              ]
+                           },
                            "trackingStartDate": {
                               "type": "string",
                               "format": "date"
@@ -181,5 +239,6 @@
          }
       }
    },
-   "servers": [{ "url": "http://localhost" }]
+   "servers": [{ "url": "http://localhost:3000" }],
+   "security": [{ "cookieAuth": [] }]
 }
