# server/src/api/auth/routes.ts
@@ -5,15 +5,23 @@ import {
    HookHandlerDoneFunction,
 } from 'fastify';
 import { signup } from './services';
-import { FromSchema } from 'json-schema-to-ts';
-import { loginSchema, signupSchema } from './schemas';
+import {
+   loginBodySchema,
+   signupBodySchema,
+   SignupBodyType,
+   LoginBodyType,
+} from './schemas';
 import { login } from './services';
 
 const authRoutes: FastifyPluginAsync = async (fastify, opts) => {
-   fastify.post<{ Body: FromSchema<(typeof signupSchema)['body']> }>(
+   fastify.post<{ Body: SignupBodyType }>(
       '/signup',
       {
-         schema: signupSchema,
+         schema: {
+            tags: ['auth'],
+            operationId: 'signup',
+            body: signupBodySchema,
+         },
          preHandler: handleAlreadySignedIn,
       },
       async (req, res) => {
@@ -26,9 +34,16 @@ const authRoutes: FastifyPluginAsync = async (fastify, opts) => {
       }
    );
 
-   fastify.post<{ Body: FromSchema<(typeof loginSchema)['body']> }>(
+   fastify.post<{ Body: LoginBodyType }>(
       '/login',
-      { schema: loginSchema, preHandler: handleAlreadySignedIn },
+      {
+         schema: {
+            tags: ['auth'],
+            operationId: 'login',
+            body: loginBodySchema,
+         },
+         preHandler: handleAlreadySignedIn,
+      },
       async (req, res) => {
          const { email, password } = req.body;
          const user = await login({ email, password });
@@ -37,10 +52,19 @@ const authRoutes: FastifyPluginAsync = async (fastify, opts) => {
       }
    );
 
-   fastify.post('/logout', async (req, res) => {
-      await req.session.destroy();
-      res.send('Logout Successful');
-   });
+   fastify.post(
+      '/logout',
+      {
+         schema: {
+            tags: ['auth'],
+            operationId: 'logout',
+         },
+      },
+      async (req, res) => {
+         await req.session.destroy();
+         res.send('Logout Successful');
+      }
+   );
 };
 
 function handleAlreadySignedIn(
